<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    card_view:cardCornerRadius="5dp">

    <RelativeLayout
        android:id="@+id/list_view_info_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_comment_square_box"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/userPhotoUrlImageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/image_default_icon" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/userPhotoUrlImageView"
            android:text="@string/user_name_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/commentPostedDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/userPhotoUrlImageView"
            android:layout_below="@+id/userNameTextView"
            android:text="@string/user_comment_posted_date"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/commentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_below="@+id/userPhotoUrlImageView"
            android:text="@string/user_comment_text"
            android:textSize="12sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>